--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,33 @@
-*.cmd
-*.ko
-*.mod.c
+# Normal rules
+# 
+.*
 *.o
+*.o.*
+*.a
+*.s
+*.ko
+*.so
+*.so.dbg
+*.mod.c
+*.i
+*.lst
+*.symtypes
 *.order
-*.symvers
+*.elf
+*.bin
+*.gz
+*.bz2
+*.lzma
+*.xz
+*.lz4
+*.lzo
+*.patch
+*.gcno
+modules.builtin
+Module.symvers
+.dwo
 
+#
+# git files that we don't want to ignore even it they are dot-files
+#
+!.gitignore
